main.tf
# Create backend statefile
resource "aws_s3_bucket" "hashcorp_state" {
    bucket = "8hashcorp-state-file"
    force_destroy = true
  
}
resource "aws_s3_bucket_versioning" "terraform_bucket_versioning" {
    bucket = aws_s3_bucket.hashcorp_state.id
     versioning_configuration {
    status = "Enabled"
  }
  
}
resource "aws_s3_bucket_server_side_encryption_configuration" "hashcorp_state" {
    bucket = aws_s3_bucket.hashcorp_state.bucket
    rule {
       apply_server_side_encryption_by_default {
      sse_algorithm     = "AES256"
    }
    }

  
}
resource "aws_dynamodb_table" "terraform_lock" {
  name         = "terraform-state-locking"
  billing_mode = "PAY_PER_REQUEST"
  hash_key     = "LockID"
  attribute {
    name = "LockID"
    type = "S"
  }

}

# 1. Create vpc
resource "aws_vpc" "hash-vpc" {
  cidr_block       = var.vpc_cidr_block
  instance_tenancy = var.vpc_instance_tenancy
  tags = var.vpc_tags_name

}
# 2. Create Internet Gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.hash-vpc.id
  tags = var.internet_gateway_tag_name
}

# 3. Create custom Route Table
resource "aws_route_table" "hash-route" {
  vpc_id = aws_vpc.hash-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  route {
    ipv6_cidr_block        = "::/0"
    gateway_id = aws_internet_gateway.gw.id
  }
  tags = var.route_table_tag_name
}
# 4. Create Subnet
resource "aws_subnet" "subnet1" {
  vpc_id     = aws_vpc.hash-vpc.id
  cidr_block = var.subnet1_cidr_block
  availability_zone = var.subnet1-az
  tags = var.subnet1_tag_name
}
# 5. Associate Subnet with Route Table
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet1.id
  route_table_id = aws_route_table.hash-route.id
}
# 6. Create Security Group to allow port 22, 80, 443
resource "aws_security_group" "web-traffic" {
  name        = var.aws_security_group_name
  description = var.aws_security_group_description
  vpc_id      = aws_vpc.hash-vpc.id

    ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }


  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

    egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = var.aws_security_group_tag_name
}
# 7. Create network interface with an ip in the subnet that created in step 4
resource "aws_network_interface" "hash" {
  subnet_id       = aws_subnet.subnet1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.web-traffic.id]

}
# 8. Assign an elastic IP to the network interface created in step 7
resource "aws_eip" "hash" {
  vpc                       = true
  network_interface         = aws_network_interface.hash.id
  associate_with_private_ip = "10.0.1.50"
  depends_on = [aws_internet_gateway.gw]
}

# 9. Create Ubuntu server and install apache2

resource "aws_instance" "web-server" {
  ami           ="ami-0ee23bfc74a881de5"
  instance_type = "t2.micro"
  availability_zone = "us-east-1a"
  key_name = "production key"
  #count = 1
  network_interface {
    device_index = 0
    network_interface_id = aws_network_interface.hash.id
  }

  user_data = <<-EOF
            #!/bin/bash
            sudo apt update
            sudo apt install apache2 -y
            sudo systemctl enable apache2
            sudo systemctl start apache2
            sudo echo "HERE WE GO AGAIN !!!!!!!" > /var/www/html/index.html
            EOF

  tags = {
    Name = "Apache-server"
  }
}

output "server_public_ip" {
    value = aws_instance.web-server.public_ip   
}

output "server_private_ip" {
    value = aws_instance.web-server.private_ip   
}

# terraform refresh
# terraform destroy -target <resource name>
# terraform apply -target <resource name>
# terraform state show < resource >
# terraform state list
